Bug 328790 - "main thread never joins with async-io thread". r=brettw.